--- a/styles/colors.less
+++ b/styles/colors.less
@@ -12,8 +12,6 @@
 @blueberry:       #00aaff;  // blue→green
 @fig:             #cc00ff;  // blue→red
 
-
-// For some reason, colors of gutter elements get 60/40 mixed with darkblue.
-// To match these colors in the scroll-view, here some extra definitions.
-@gutter-white:    #9999b4;
-@gutter-gray:     #4d4d68;
+// Shades between white and darkblue, for the gutter and similar items.
+@gutter-light:    #6666aa;
+@gutter-dark:     #222266;
