--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,17 +1,27 @@
-// dark blue candy store colors
-// revised from gvim theme
+// These colors are specific to the theme. Do not use in a package!
 
-// The Store:
-@darkblue:        #000044;
+// Dark-blue Candy Store colors, revised from my gvim theme
 
-// The Candy:
-@raspberry:       #ff00aa;  // red→blue
-@mango:           #ffaa00;  // red→green
-@lime:            #aaff00;  // green→red
-@kiwi:            #00ff66;  // green→blue
-@blueberry:       #00aaff;  // blue→green
-@fig:             #cc00ff;  // blue→red
+// The store:
+@darkblue:          #000044;
 
-// Shades between white and darkblue, for the gutter and similar items.
-@gutter-light:    #6666aa;
-@gutter-dark:     #222266;
+// The candy:
+@raspberry:         #ff00aa;  // red→blue
+@mango:             #ffaa00;  // red→green
+@lime:              #aaff00;  // green→red
+@kiwi:              #00ff66;  // green→blue
+@blueberry:         #00aaff;  // blue→green
+@fig:               #cc00ff;  // blue→red
+
+// Shades between darkblue and white:
+@darkblue-pale:     #333399;
+@darkblue-paler:    #6666aa;
+@darkblue-palest:   #9999dd;
+@darkblue-pastel:   #bbbbff;
+
+// Other colors:
+@white:             #ffffff;
+@yellow:            #ffff00;
+@blue:              #0000ff;
+@green:             #00ff00;
+@red:               #ff0000;
