restructured less-files

--- a/styles/base.less
+++ b/styles/base.less
@@ -1,165 +1,7 @@
 @import "syntax-variables";
 
-atom-text-editor {
+@import "editor";
 
-  background-color: @syntax-background-color;
-  color: @syntax-text-color;
+@import "syntax";
 
-  // give change markers some breathing room
-  border-left: 1px solid @syntax-background-color;
-
-  .wrap-guide {
-    background-color: @syntax-wrap-guide-color;
-  }
-
-  .indent-guide {
-    color: @syntax-indent-guide-color;
-  }
-
-  .invisible-character  {
-    color: @syntax-invisible-character-color;
-  }
-
-  .gutter {
-    color: @syntax-gutter-text-color;
-
-    // create line between gutter and text
-    border-right: 1px solid @syntax-wrap-guide-color;
-    margin-right: 1px;
-
-    .line-number {
-      opacity: 1;
-
-      &.cursor-line {
-        background-color: @syntax-gutter-background-color-selected;
-      }
-    }
-  }
-
-  .gutter .line-number.folded,
-  .gutter .line-number:after,
-  .fold-marker:after {
-    color: @syntax-text-color;
-  }
-
-  .invisible {
-    color: @syntax-text-color;
-  }
-
-  .cursor {
-    color: @syntax-cursor-color;
-    background-color: fade(@syntax-cursor-color, 25%);
-  }
-
-  .selection .region {
-    background-color: @syntax-selection-color;
-  }
-
-  // for bracket-matcher core package
-  .bracket-matcher .region {
-    border-bottom: 1px solid @syntax-cursor-color;
-  }
-}
-
-
-// Syntax styles
-
-.syntax--keyword {
-  color: @lime;
-}
-
-.syntax--storage {
-  color: @kiwi;
-}
-
-.syntax--entity {
-  color: @mango;
-}
-
-.syntax--constant {
-  // constants can appear within strings!
-  color: @blueberry;
-}
-
-.syntax--string {
-  color: @raspberry;
-}
-
-.syntax--punctuation {
-  // punctuation can appear within entities, comments and strings
-  // in CSS and bash
-  // apparently unused in Python
-  // not using it for now
-}
-
-.syntax--comment {
-  color: @fig;
-}
-
-.syntax--invalid {
-  // haven't seen an instance, this seems like a decent default
-  background-color: red;
-}
-
-
-
-// ************************************************************
-// markdown
-.syntax--markup {
-
-  &.syntax--bold,
-  &.syntax--heading,
-  &.syntax--strong.syntax--emphasis {
-    font-weight: bold;
-  }
-
-  &.syntax--italic,
-  &.syntax--emphasis:not(.syntax--strong) {
-    font-style: italic;
-  }
-
-  &.syntax--underline {
-    text-decoration: underline;
-  }
-
-  &.syntax--strike {
-    text-decoration: line-through;
-  }
-
-  &.syntax--heading,
-  &.syntax--substitution,
-  &.syntax--changed {
-    color: @raspberry;
-  }
-
-  &.syntax--inserted,
-  &.syntax--addition,
-  &.syntax--quote {
-    color: @mango;
-  }
-
-  &.syntax--deletion,
-  &.syntax--hr {
-    color: @lime;
-  }
-
-  &.syntax--link {
-    color: @kiwi;
-  }
-
-  &.syntax--list {
-    & > .syntax--punctuation {
-      color: @blueberry;
-    }
-  }
-
-  &.syntax--raw,
-  &.syntax--code {
-    color: @fig;
-  }
-
- .syntax--punctuation {
-   opacity: 0.5;
- }
-
-}
+@import "markdown";
