--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -13,7 +13,7 @@
 @syntax-background-color: @darkblue;
 
 // Guide colors
-@syntax-wrap-guide-color: @darkblue-palest;
+@syntax-wrap-guide-color: @darkblue-paler;
 @syntax-indent-guide-color: @darkblue-paler;
 @syntax-invisible-character-color: @darkblue-paler;
 
