--- a/styles/markdown.less
+++ b/styles/markdown.less
@@ -1,5 +1,4 @@
-// based on resources/markup-and-down.less
-// from markdown-language
+// based on resources/markup-and-down.less from markdown-language
 
 
 // 2.
