Highlight trailing whitespace

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -55,6 +55,10 @@ atom-text-editor {
   .selection .region {
     background-color: @syntax-selection-color;
   }
+  
+  .trailing-whitespace {
+    border-bottom: 1px solid @syntax-gutter-background-color-selected;  
+  }
 
   // for bracket-matcher core package
   .bracket-matcher .region {
